// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container [App] - sagas loginUser Saga should dispatch loginFailure action if an error is thrown 1`] = `
Object {
  "@@redux-saga/IO": true,
  "SELECT": Object {
    "args": Array [],
    "selector": [Function],
  },
}
`;

exports[`Container [App] - sagas loginUser Saga should dispatch loginFailure action if an error is thrown 2`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      Object {
        "password": "lol",
        "username": "demo",
      },
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`Container [App] - sagas loginUser Saga should dispatch loginFailure when no user is specified 1`] = `
Object {
  "@@redux-saga/IO": true,
  "SELECT": Object {
    "args": Array [],
    "selector": [Function],
  },
}
`;

exports[`Container [App] - sagas loginUser Saga should dispatch loginFailure when no user is specified 2`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      Object {
        "password": "lol",
        "username": null,
      },
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`Container [App] - sagas loginUser Saga should dispatch loginSuccess action if the token is recieved and stored successfully 1`] = `
Object {
  "@@redux-saga/IO": true,
  "SELECT": Object {
    "args": Array [],
    "selector": [Function],
  },
}
`;

exports[`Container [App] - sagas loginUser Saga should dispatch loginSuccess action if the token is recieved and stored successfully 2`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      Object {
        "password": "lol",
        "username": "demo",
      },
    ],
    "context": null,
    "fn": [Function],
  },
}
`;
